Prevent storing diff files in recent files history

BUG: 436906